fix style: game img is visible again

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -28,7 +28,7 @@ body::before {
     z-index: -1;
 }
 
-.game-page {
+.game-page::before {
     background-image: url('../assets/figma_components/game-background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
